#508 [feat] top 2 궁금해요 산정 방식 변경
Top 2 를 궁금해요 생성 시점을 기준으로 채우는 방식으로 변경